--- a/SimpleWebApplication/Views/Home/Privacy.cshtml
+++ b/SimpleWebApplication/Views/Home/Privacy.cshtml
@@ -1,6 +1,21 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Authenticated";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<dl>
+    @foreach (var claim in this.User.Claims)
+    {
+        <dt>@claim.Type</dt>
+        <dd>@claim.Value</dd>
+    }
+</dl>
+
+<hr/>
+
+<ul>
+    @foreach (var claim in this.User.Claims)
+    {
+        <li><strong>@claim.Type</strong>: @claim.Value</li>
+    }
+</ul>
